--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="card">
                   <a href="quiz apps/1.simplequiz/index.html"><img src="./imgs/another2.png" alt="member" class="card-img-top"></a>
                   <div class="card-body text-center">
-                      <a href="quiz apps/1.simplequiz/index.html" target="_blank" class="btn btn-warning text-uppercase text-center">Play quiz</a>
+                      <a href="quiz apps/quiz2/index.html" target="_blank" class="btn btn-warning text-uppercase text-center">Play quiz</a>
                   </div>
                 
                 </div>
